--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
+    "cookieparser": "^0.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jquery": "^3.7.1",
+    "jsdom": "^23.0.1",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
