--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
     "jquery": "^3.7.1",
     "jsdom": "^23.0.1",
+    "method-override": "^3.0.0",
     "mongoose": "^8.0.3",
     "sass": "^1.69.5",
     "scss": "^0.2.4"
